--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-/* CSS Reset */
+
 * {
   padding: 0;
   margin: 0;
@@ -7,13 +7,13 @@
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
 }
-/* CSS Variables */
+
 :root {
-  --brand-color: #00bfa6;
+  --brand-color: #d12340;
   --linear-back: Linear-gradient(
     180deg,
-    rgba(34, 193, 195, 1) 0%,
-    rgba(0, 191, 92, 1) 100%
+    rgb(49, 62, 182) 0%,
+    rgb(3, 6, 10) 100%
   );
 }
 a {
@@ -23,7 +23,7 @@ a {
 li {
   list-style: none;
 }
-/* CSS in Body */
+
 body {
   height: 100vh;
   width: 100vw;
@@ -39,9 +39,9 @@ body {
   padding: 1rem;
   position: relative;
 }
-/* Sidebar */
+
 .website_container .sidebar_container {
-  width: 35%;
+  width: 45%;
   height: 100%;
   background-color: white;
   margin-right: 1rem;
@@ -123,7 +123,7 @@ body {
   color: var(--brand-color);
   transition: 0.3s;
 }
-/* Sidebar Navigation */
+
 .sidebar_container .sidebar_navigation {
   position: absolute;
   top: 0;
@@ -148,11 +148,11 @@ body {
   transition: 0.3s;
   font-weight: bold;
 }
-/* Content */
+
 .website_container .content_container {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: rgb(199, 202, 207);
   border-radius: 0.5rem;
   padding: 1rem;
   overflow-y: scroll;
@@ -165,7 +165,7 @@ body {
   background-color: gray;
   border-radius: 0.2rem;
 }
-/* About Page */
+
 .title {
   font-size: 1.6rem;
   text-transform: uppercase;
@@ -262,7 +262,7 @@ li .profile_title {
   font-size: 1rem;
   font-weight: 300;
 }
-/* Skills Container */
+
 .skill_box .skill_title {
   font-size: 1.2rem;
   font-weight: 500;
@@ -282,7 +282,7 @@ li .profile_title {
   height: 0.8rem;
 }
 
-/* Global Menu CSS */
+
 #global_menu_button_container {
   position: absolute;
   left: -3rem;
@@ -309,7 +309,7 @@ li .profile_title {
 #global_menu_items {
   position: fixed;
   left: -120%;
-  /* left: 0; */
+
   top: 0;
   background-color: white;
   width: 40%;
@@ -350,7 +350,7 @@ li .profile_title {
   color: var(--brand-color);
   transition: 0.3s;
 }
-/* Making Responsive */
+
 @media screen and (max-width: 1200px) {
   .website_container {
     width: 92%;
